--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -3,3 +3,7 @@ AppBundle\Entity\Task:
     name: '<name()>'
     data_criacao: '<dateTimeBetween("-200 days", "now")>'
     status: '<numberBetween(0,1)>'
+
+AppBundle\Entity\User:
+  user1:
+    __construct: ['admin','$2a$08$jHZj/wJfcVKlIwr5AvR78euJxYK7Ku5kURNhNx.7.CSIJ3Pq6LEPC']
