--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,8 +1,7 @@
 # https://symfony.com/doc/current/security.html
 security:
     encoders:
-        AppBundle\Entity\User:
-            algorithm: bcrypt
+        Waller\AppBundle\Entity\User: bcrypt
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
@@ -10,11 +9,6 @@ security:
             entity:
                 class: AppBundle:User
                 property: username
-        your_db_provider:
-            entity:
-                class: AppBundle:User
-                property: username
-
 
     firewalls:
       # disables authentication for assets and the profiler, adapt it according to your needs
@@ -38,8 +32,7 @@ security:
             guard:
                 authenticators:
                   - lexik_jwt_authentication.jwt_token_authenticator
-                  - AppBundle\Security\TokenAuthenticator
-                entry_point: AppBundle\Security\TokenAuthenticator
+                entry_point: lexik_jwt_authentication.jwt_token_authenticator
 
         main:
             pattern: ^/api
@@ -48,13 +41,13 @@ security:
             guard:
                 authenticators:
                   - lexik_jwt_authentication.jwt_token_authenticator
-                  - AppBundle\Security\TokenAuthenticator
-                entry_point: AppBundle\Security\TokenAuthenticator
-#            logout:
-#                path:  /logout
-#                target: /login
+                entry_point: lexik_jwt_authentication.jwt_token_authenticator
+            logout:
+                path:  /logout
+                target: /login
 
     access_control:
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
