Altera rota login

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,5 +7,5 @@ actions:
    resource: '@AppBundle/Resources/config/routing.yml'
 
 
-api_login_check:
-   path: /api/login_check
+login_check:
+   path: /login_check
