--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,11 +17,11 @@ security:
             security: false
 
         login:
-            pattern: ^/api/login
+            pattern: ^/login
             stateless: true
             anonymous: ~
             form_login:
-                check_path:             /api/login_check
+                check_path:             /login_check
                 success_handler:        lexik_jwt_authentication.handler.authentication_success
                 failure_handler:        lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
@@ -48,5 +48,5 @@ security:
 
     access_control:
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
